Fix visibility of external agents on account

--- a/apps/dashboard/src/app/account/account-arag/arag-list/arag-list.component.scss
+++ b/apps/dashboard/src/app/account/account-arag/arag-list/arag-list.component.scss
@@ -10,6 +10,7 @@
 
   .go-to-arag {
     @include body-s();
+    cursor: pointer;
     font-weight: $font-weight-semi-bold;
     text-decoration: underline;
   }
